cluster/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: final-space
  annotations:
    nginx.org/websocket-services: api
    kubernetes.io/ingress.global-static-ip-name: test-api-ip
    networking.gke.io/managed-certificates: api-certificate
    cloud.google.com/backend-config: '{"default": "api-backend"}'
spec:
  defaultBackend:
    service:
      name: 'api'
      port:
        number: 80
